# renderEngine

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  application.cpp  application.h  sources.cmake
cmake/: definitions.cmake  include_directories.cmake  libraries.cmake  names.cmake  system.cmake  util.cmake
commands/: command.h  sources.cmake
geometry/: CMakeLists.txt  geometry.cpp
model/: CMakeLists.txt
open_command/: CMakeLists.txt  open_command.cc  open_command.h
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application.cc  application.h
src/commands/: CMakeLists.txt  open_command.cc  open_command.h
src/examples/: CMakeLists.txt
src/examples/curves/: CMakeLists.txt  main.cc  sources.cmake
src/global/: default_tests_main.cc
src/graphics/: CMakeLists.txt  canvas.cc  canvas.h  canvastga.cc  canvastga.h  defaultshader.cc  defaultshader.h  fragmentshader.h  gouraudfragmentshader.cc  gouraudfragmentshader.h  gouraudvertexshader.cc  gouraudvertexshader.h  mesh.cc  mesh.h  objmesh.cc  objmesh.h  pipeline.cc  pipeline.h  renderer.cc  renderer.h  scenegraph.cc  scenegraph.h  scenegraphvisitor.h  scenenode.cc  scenenode.h  shader.cc  shader.h  sources.cmake  stub.cc  tgaimage.cc  tgaimage.h  vertexshader.cc  vertexshader.h
src/math/: CMakeLists.txt  color.h  compile_options.cmake  matrix.h  matrix4x4.h  nurbs.cc  nurbs.h  sources.cmake  transform.cc  transform.h  util.cc  util.h  vector2d.h  vector3d.h  vector4d.h  vectoruv.h
src/math/tests/: matrix.cc  (+6 more)
tgaimage/: CMakeLists.txt
uml/: Kursovaya.xml
view/: mainwindow.ui
(+12 files in other folders)
